# python-altinstall

./: .gitignore  README.md  changelog.json  pyproject.toml
SLES15.3/: Dockerfile  README.md  python310-altinstall.spec
SLES15.6/: README.md  python39-altinstall.spec
_deprecated/SLES15.3/: README.md
_deprecated/el7/: README.md  python39-altinstall.spec
alt1/: Dockerfile  README.md  python310-altinstall.spec
el7/: Dockerfile  README.md  python310-altinstall.spec  python310-modules_setup.patch  python38-altinstall.spec  python39-altinstall.spec
el8/: Dockerfile  README.md  python310-altinstall.spec  python311-altinstall.spec  python39-altinstall.spec
el9/: 3.10-changelog.json  Dockerfile  README.md  python310-altinstall.spec  python312-altinstall.spec  python39-altinstall.spec
fc39/: Dockerfile  README.md  python39-altinstall.spec
fc40/: Dockerfile  README.md
hce2/: Dockerfile  README.md
mga9/: Dockerfile  README.md  python39-altinstall.spec
oe1/: Dockerfile  README.md  python39-altinstall.spec
oe2203/: Dockerfile  README.md  python39-altinstall.spec
oe2403/: Dockerfile  README.md  python39-altinstall.spec
oe2409/: Dockerfile  README.md  python39-altinstall.spec
python_altinstall_packager/: __init__.py  __main__.py  _data.py  specfile_.py
python_altinstall_packager/data/: distributions.json  dockerfile_rpmbuild_template.jinja  knowledge_base.json  python.json  specfile.jinja  volumes.json
sles155/: Dockerfile  README.md  python39-altinstall.spec
sles156/: Dockerfile  README.md  python39-altinstall.spec
