[build-system]
requires = ['setuptools', 'wheel', 'simplifiedapp']
build-backend = 'setuptools.build_meta:__legacy__'

[project]
name = 'python-altinstall-packager'
dynamic = ['version', 'description', 'readme']
requires-python = '>=3.9'
authors = [
	{ name = 'Irving Leonard', email = 'irvingleonard@gmail.com'}
]
keywords = ['cpython', 'altinstall', 'rpm']
license = {text = 'BSD 3-Clause "New" or "Revised" License'}
classifiers = [
	'Development Status :: 4 - Beta',
	'Environment :: Console',
	'Intended Audience :: Developers',
	'Intended Audience :: End Users/Desktop',
	'License :: OSI Approved :: BSD License',
	'Natural Language :: English',
	'Operating System :: OS Independent',
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Topic :: Utilities',
]
dependencies = [
	'jinja2',
	'semantic-version',
	'simplifiedapp',
]

[project.optional-dependencies]
dev = [
	'coverage',
]
docker = [
	'docker',
]

[project.urls]
homepage = 'https://github.com/irvingleonard/python-altinstall-packager'
# documentation = 'https://github.com/irvingleonard/python-altinstall-packager'
repository = 'https://github.com/irvingleonard/python-altinstall-packager.git'

[tool.setuptools.packages.find]
include = ['python_altinstall_packager*']

[tool.setuptools.package-data]
"*" = ["*.json", "*.jinja"]
